# journald-bot

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.example.json  lgtm.yml  pom.xml
.github/workflows/: build.yml  deploy.yml
src/: journald-bot.cpp  journald-bot.hpp
src/main/java/me/vinceh121/journaldbot/: Config.java  JournaldBot.java  MatchCriteria.java  MatchGroup.java
src/main/java/me/vinceh121/journaldgateway/: Errno.java  JournalEntry.java  Priority.java
src/main/java/me/vinceh121/journaldgateway/parser/: AbstractParser.java  JsonParser.java  LineParser.java
